--- a/inference/package.json
+++ b/inference/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Vizcosity/CRIMSON/issues"
   },
-  "homepage": "https://github.com/Vizcosity/CRIMSON#readme"
+  "homepage": "https://github.com/Vizcosity/CRIMSON#readme",
+  "dependencies": {
+    "indent-string": "^3.2.0"
+  }
 }
