Working button and input detection. Changed approach to use fragments instead of triangles, seems promising.

--- a/inference/config/config.json
+++ b/inference/config/config.json
@@ -6,5 +6,8 @@
     "rectangle": "container",
     "triangle": "triangle",
     "polygon": "polygon"
+  },
+  "thresholds": {
+    "fragmentArea": 0.08
   }
 }
