--- a/inference/package.json
+++ b/inference/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "commander": "^2.19.0",
     "generator": "^1.0.1",
+    "glob": "^7.1.3",
     "indent-string": "^3.2.0",
     "mkdirp": "^0.5.1"
   },
