--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Vizcosity/CRIMSON#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "parcel-bundler": "^1.11.0"
   }
 }
