--- a/inference/config/config.json
+++ b/inference/config/config.json
@@ -23,5 +23,8 @@
   "globalAssetMap": {
     "css": "style",
     "js": "main"
-  }
+  },
+  "supportedPrimitives": [
+    "rectangle", "container", "row", "triangle", "image", "dropdown", "button", "input", "navigation", "footer", "header", "paragraph"
+  ]
 }
