Fix moving primitives not corresponding with actual mouse dx and dy due to relative scaling

--- a/inference/config/config.json
+++ b/inference/config/config.json
@@ -25,6 +25,6 @@
     "js": "main"
   },
   "supportedPrimitives": [
-    "rectangle", "container", "row", "triangle", "image", "dropdown", "button", "input", "navigation", "footer", "header", "paragraph"
+    "panel", "rectangle", "container", "row", "triangle", "image", "dropdown", "button", "input", "navigation", "footer", "header", "paragraph"
   ]
 }
