Implicit nesting for vertial containers and rows, with an inaccurate row inference bug

--- a/inference/config/config.json
+++ b/inference/config/config.json
@@ -2,6 +2,7 @@
   "grid":{
     "cellBudget": 12
   },
+  "padding": 5,
   "shapeMap": {
     "rectangle": "container",
     "triangle": "triangle",
