--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ detection/src/clf/training_data/squiggle_pos/
 detection/src/clf/training_data/squiggle_neg/
 inference/.cache
 inference/output/*
+detection/clf/squiggle_legacy
+detection/src/clf/squiggle_legacy
+detection/src/clf/PrimitiveDetect
