--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "api-version": "1",
   "description": "Interactive web platform for the CRIMSON prototyping inference engine, allowing users to customise and adjust inferred componenets for extra practicality.",
-  "main": "app.js",
+  "main": "api.js",
   "scripts": {
+    "start": "npm run api & npm start --prefix frontend/",
     "api": "DEBUG=true node api.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "post-install": "npm link crimson-inference"
   },
   "repository": {
     "type": "git",
