--- a/inference/config/config.json
+++ b/inference/config/config.json
@@ -26,6 +26,6 @@
     "js": "main"
   },
   "supportedPrimitives": [
-    "panel", "rectangle", "container", "row", "triangle", "image", "dropdown", "button", "input", "navigation", "footer", "header", "paragraph"
+    "header", "paragraph", "image", "button", "input", "dropdown", "checkbox", "container", "row", "navigation", "footer", "panel"
   ]
 }
