Add nounproject placeholder logos & correct wrongly positioned navbrand

--- a/inference/config/config.json
+++ b/inference/config/config.json
@@ -27,5 +27,11 @@
   },
   "supportedPrimitives": [
     "header", "paragraph", "image", "button", "input", "dropdown", "checkbox", "container", "row", "navigation", "footer", "panel"
-  ]
+  ],
+  "api": {
+    "nounProject": {
+      "key": "dd55f8784cd34c8cbb9f74dbd09b5f64",
+      "secret": "22ebfe79ca254ac7bf562ddd60de4ed5"
+    }
+  }
 }
