--- a/inference/package.json
+++ b/inference/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Vizcosity/CRIMSON#readme",
   "dependencies": {
     "commander": "^2.19.0",
+    "ejs": "^2.6.1",
     "generator": "^1.0.1",
     "glob": "^7.1.3",
     "indent-string": "^3.2.0",
