--- a/inference/package.json
+++ b/inference/package.json
@@ -22,12 +22,16 @@
   "dependencies": {
     "commander": "^2.19.0",
     "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "generator": "^1.0.1",
     "glob": "^7.1.3",
     "indent-string": "^3.2.0",
     "mayonnaise.js": "^1.1.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "sentence-generator": "^1.0.1",
     "the-noun-project": "^2.1.0"
