--- a/inference/package.json
+++ b/inference/package.json
@@ -32,6 +32,7 @@
     "ncp": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "remove": "^0.1.5",
     "request": "^2.88.0",
     "sentence-generator": "^1.0.1",
     "the-noun-project": "^2.1.0"
