--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.15.6",
     "multer": "^1.4.1",
     "parcel-bundler": "^1.11.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
