--- a/inference/package.json
+++ b/inference/package.json
@@ -27,6 +27,7 @@
     "generator": "^1.0.1",
     "glob": "^7.1.3",
     "indent-string": "^3.2.0",
+    "local-ipv4-address": "0.0.2",
     "mayonnaise.js": "^1.1.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
