--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "local-ipv4-address": "0.0.2",
     "multer": "^1.4.1",
     "parcel-bundler": "^1.11.0",
     "passport": "^0.4.0",
