--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "downloadjs": "^1.4.7",
     "interactjs": "^1.3.4",
+    "js-file-download": "^0.4.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-interactjs-wrapper": "^0.1.7",
