--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^16.7.0",
     "react-interactjs-wrapper": "^0.1.7",
     "react-resize-detector": "^3.2.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
+    "react-spinners": "^0.5.1",
     "reactablejs": "0.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
