--- a/inference/package.json
+++ b/inference/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.6",
     "generator": "^1.0.1",
     "glob": "^7.1.3",
+    "glob-promise": "^3.4.0",
     "indent-string": "^3.2.0",
     "local-ipv4-address": "0.0.2",
     "mayonnaise.js": "^1.1.0",
@@ -35,6 +36,7 @@
     "passport-local": "^1.0.0",
     "remove": "^0.1.5",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "sentence-generator": "^1.0.1",
     "the-noun-project": "^2.1.0"
   },
