--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -8,7 +8,7 @@
     "start": "npm run api & npm start --prefix frontend/",
     "api": "DEBUG=true node api.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm link crimson-inference"
+    "post-install": "npm link crimson-inference"
   },
   "repository": {
     "type": "git",
@@ -25,10 +25,14 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "glob": "^7.1.3",
+    "glob-promise": "^3.4.0",
     "local-ipv4-address": "0.0.2",
     "multer": "^1.4.1",
     "parcel-bundler": "^1.11.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
