Add deployment to GitHub & Heroku feature with front + backend implementation

--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Vizcosity/CRIMSON#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
