--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -9,6 +9,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-interactjs-wrapper": "^0.1.7",
+    "react-modal": "^3.8.1",
     "react-resize-detector": "^3.2.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
@@ -30,7 +31,8 @@
   },
   "api": {
     "generateACR": "/api/v1/generateACR",
-    "generateCode": "/api/v1/generateCode"
+    "generateCode": "/api/v1/generateCode",
+    "deployToGithub": "/api/v1/deployToGithub"
   },
   "proxy": "http://localhost:3715",
   "browserslist": [
