--- a/inference/package.json
+++ b/inference/package.json
@@ -31,6 +31,7 @@
     "local-ipv4-address": "0.0.2",
     "mayonnaise.js": "^1.1.0",
     "mkdirp": "^0.5.1",
+    "mongodb": "^3.1.13",
     "ncp": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
