--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -29,6 +29,7 @@
     "glob": "^7.1.3",
     "glob-promise": "^3.4.0",
     "local-ipv4-address": "0.0.2",
+    "mongodb": "^3.1.13",
     "multer": "^1.4.1",
     "parcel-bundler": "^1.11.0",
     "passport": "^0.4.0",
