Implement functional ACR modification dialogue mvp

--- a/web-platform/frontend/public/manifest.json
+++ b/web-platform/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CRIMSON",
+  "name": "An intelligent tool for rapid prototyping on the web.",
   "icons": [
     {
       "src": "favicon.ico",
