Fix parented panel bug, zip post-auth bug & center crimson header text

--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -8,6 +8,7 @@
     "js-file-download": "^0.4.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-file-drop": "^0.2.7",
     "react-interactjs-wrapper": "^0.1.7",
     "react-modal": "^3.8.1",
     "react-resize-detector": "^3.2.1",
@@ -15,6 +16,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-spinners": "^0.5.1",
+    "react-tooltip": "^3.9.2",
     "reactablejs": "0.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
