--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -6,8 +6,8 @@
   "main": "api.js",
   "scripts": {
     "start": "npm run api & npm start --prefix frontend/",
+    "test": "mocha --timeout 30000",
     "api": "DEBUG=true node api.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "post-install": "npm link crimson-inference"
   },
   "repository": {
@@ -29,12 +29,14 @@
     "glob": "^7.1.3",
     "glob-promise": "^3.4.0",
     "local-ipv4-address": "0.0.2",
+    "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1",
     "parcel-bundler": "^1.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "request-promise-native": "^1.0.5"
   }
 }
