--- a/Dockerfile_detection.dockerignore
+++ b/Dockerfile_detection.dockerignore
@@ -23,3 +23,4 @@ inference/.*
 detection/src/clf/PrimitiveDetect/darknet-yolo
 detection/src/clf/PrimitiveDetect/data
 detection/src/clf/PrimitiveDetect/.git
+detection/src/pyweb/
