--- a/detection/src/requirements.txt
+++ b/detection/src/requirements.txt
@@ -1,10 +1,38 @@
-
-google-api-core>=1.7.0
-google-auth>=1.6.2
-google-cloud-vision>=0.35.2
-googleapis-common-protos>=1.5.6
-numpy>=1.15.4
-imutils>=0.5.1
-opencv-python>=4.0.0
-protobuf>=3.6.1
-grpcio
+aniso8601==7.0.0
+cachetools==3.1.1
+certifi==2019.6.16
+chardet==3.0.4
+Click==7.0
+docopt==0.6.2
+Flask==1.1.1
+Flask-Jsonpify==1.5.0
+Flask-RESTful==0.3.7
+google-api-core==1.14.2
+google-auth==1.6.3
+google-cloud-vision==0.38.1
+googleapis-common-protos==1.6.0
+grpcio==1.22.0
+idna==2.8
+imutils==0.5.2
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+numpy==1.17.0
+opencv-python==4.1.0.25
+pipreqs==0.4.9
+protobuf==3.9.1
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
+python-dateutil==2.7.3
+pytz==2019.2
+requests==2.22.0
+rsa==4.0
+scikit-learn==0.20.0
+scipy==1.3.1
+six==1.12.0
+sklearn==0.0
+tqdm==4.31.1
+urllib3==1.25.3
+waitress==1.3.0
+Werkzeug==0.15.5
+yarg==0.1.9
