--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -5,8 +5,8 @@
   "description": "Interactive web platform for the CRIMSON prototyping inference engine, allowing users to customise and adjust inferred componenets for extra practicality.",
   "main": "api.js",
   "scripts": {
-    "start": "npm run api & npm start --prefix frontend/",
-    "api": "DEBUG=true node api.js",
+    "start": "DEBUG=true PRODUCTION=true node app.js",
+    "dev": "DEBUG=true node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "post-install": "npm link crimson-inference"
   },
