--- a/Dockerfile_web_core
+++ b/Dockerfile_web_core
@@ -15,6 +15,10 @@ RUN npm link crimson-inference
 
 RUN npm install
 
+RUN apt-get update
+
+RUN apt-get install net-tools
+
 EXPOSE 3715
 EXPOSE 3000
 
