--- a/Dockerfile_detection
+++ b/Dockerfile_detection
@@ -12,4 +12,4 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 5373
 
-CMD ["python3", "server.py"]
+CMD ./update-detect-dns.sh && python3 server.py
