--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -5,6 +5,7 @@
   "description": "Interactive web platform for the CRIMSON prototyping inference engine, allowing users to customise and adjust inferred componenets for extra practicality.",
   "main": "api.js",
   "scripts": {
+    "update-dns": "./update-web-dns.sh",
     "start": "DEBUG=true PRODUCTION=true node app.js",
     "dev": "DEBUG=true node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
