--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -23,9 +23,12 @@
   "homepage": "https://github.com/Vizcosity/CRIMSON#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-dynamic-middleware": "^1.0.0",
+    "express-http-proxy": "^1.6.0",
     "express-session": "^1.15.6",
     "glob": "^7.1.3",
     "glob-promise": "^3.4.0",
