--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -35,6 +35,7 @@
     "local-ipv4-address": "0.0.2",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1",
+    "node-html-parser": "^1.1.16",
     "parcel-bundler": "^1.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
