--- a/Dockerfile_detection
+++ b/Dockerfile_detection
@@ -12,4 +12,7 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 5373
 
+ENV CRIMSON_GODADDY_API_SECRET=$CRIMSON_GODADDY_API_SECRET
+ENV CRIMSON_GODADDY_API_KEY=$CRIMSON_GODADDY_API_KEY
+
 CMD ./update-detect-dns.sh && python3 server.py
