--- a/Dockerfile_web_core
+++ b/Dockerfile_web_core
@@ -22,4 +22,8 @@ RUN apt-get install net-tools
 EXPOSE 3715
 EXPOSE 3000
 
+ENV CRIMSON_GODADDY_API_SECRET=$CRIMSON_GODADDY_API_SECRET
+ENV CRIMSON_GODADDY_API_KEY=$CRIMSON_GODADDY_API_KEY
+ENV SHAPE_DETECT_WEB_API_ENDPOINT=https://crimson-detection.herokuapp.com/api/v1/shapeDetect
+
 CMD ./update-web-dns.sh && npm link crimson-inference && npm start
