--- a/Dockerfile_web_core.dockerignore
+++ b/Dockerfile_web_core.dockerignore
@@ -1,3 +1,5 @@
+.git/
+
 sketch-code/
 benchmark/
 pix2code/
@@ -9,7 +11,7 @@ inference/node_modules/
 
 web_platform/.cache/
 web_platform/.generated/
-web_platform/.uploads
+web_platform/.uploads/
 web_platform/node_modules/
 
 web_platform/frontend/node_modules/
