--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "update-dns": "./update-web-dns.sh",
     "start": "DEBUG=true PRODUCTION=true node app.js",
-    "dev": "DEBUG=true node app.js",
+    "dev": "DEBUG=true node app.js & npm start --prefix ./frontend",
     "test": "echo \"Error: no test specified\" && exit 1",
     "post-install": "npm link crimson-inference"
   },
