--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "dependencies": {
     "downloadjs": "^1.4.7",
+    "htmltojsx": "^0.3.0",
     "interactjs": "^1.3.4",
     "js-file-download": "^0.4.4",
     "react": "^16.7.0",
@@ -27,6 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "convert-svgs": "node src/assets/ConvertAllToJSX.js",
     "post-install": "npm link crimson-inference"
   },
   "eslintConfig": {
