--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.15.6",
     "glob": "^7.1.3",
     "glob-promise": "^3.4.0",
+    "http-proxy-middleware": "^0.20.0",
     "local-ipv4-address": "0.0.2",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1",
