Fix broken link to local js debug script on subpath proxy

--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -8,6 +8,7 @@
     "update-dns": "./update-web-dns.sh",
     "start": "DEBUG=true PRODUCTION=true node app.js",
     "api": "DEBUG=true node app.js",
+    "offline-api": "SHAPE_DETECT_WEB_API_ENDPOINT= npm run api",
     "dev": "DEBUG=true node app.js & npm start --prefix ./frontend",
     "test": "echo \"Error: no test specified\" && exit 1",
     "post-install": "npm link crimson-inference"
