--- a/inference/package.json
+++ b/inference/package.json
@@ -29,6 +29,7 @@
     "glob-promise": "^3.4.0",
     "indent-string": "^3.2.0",
     "local-ipv4-address": "0.0.2",
+    "lodash": "^4.17.15",
     "mayonnaise.js": "^1.1.0",
     "mkdirp": "^0.5.1",
     "mongodb": "^3.1.13",
