--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -8,6 +8,7 @@
     "htmltojsx": "^0.3.0",
     "interactjs": "^1.3.4",
     "js-file-download": "^0.4.4",
+    "lodash": "^4.17.15",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-file-drop": "^0.2.7",
