--- a/web-platform/frontend/package.json
+++ b/web-platform/frontend/package.json
@@ -46,5 +46,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.8",
+    "@types/react": "^16.9.30",
+    "@types/react-dom": "^16.9.5",
+    "typescript": "^3.8.3"
+  }
 }
