--- a/inference/package.json
+++ b/inference/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "benchmark": "DEBUG=true node main.js ../detection/test/images/benchmark.png",
     "gridsample": "DEBUG=true node main.js ../detection/test/images/grid_sample_1.png",
-    "gridsample2": "DEBUG=true node main.js ../detection/test/images/grid_sample_2.png"
+    "gridsample2": "DEBUG=true node main.js ../detection/test/images/grid_sample_2.png",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
