--- a/inference/package.json
+++ b/inference/package.json
@@ -8,7 +8,8 @@
     "benchmark": "DEBUG=true node main.js ../detection/test/images/benchmark.png",
     "gridsample": "DEBUG=true node main.js ../detection/test/images/grid_sample_1.png",
     "gridsample2": "DEBUG=true node main.js ../detection/test/images/grid_sample_2.png",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "repository": {
     "type": "git",
