--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ detection/src/clf/training_data/squiggle_yolo/images/*.txt
 detection/src/clf/training_data/squiggle_yolo/labels/*.txt
 detection/src/clf/training_data/squiggle_pos/
 detection/src/clf/training_data/squiggle_neg/
+detection/src/pyweb
 inference/.cache
 inference/output/*detection/clf/squiggle_legacy
 detection/src/clf/squiggle_legacy
